# cmake-3.30-qrc-repro

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  hello_world_1.qrc  hello_world_2.qrc  main.cpp
